env_to_gitignore2

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-REACT_APP_APPWRITE_URL = "test environment"
+VITE_APPWRITE_URL = "https://cloud.appwrite.io/v1"
+VITE_APPWRITE_PROJECT_ID = "66a8dab6000c6f80bd10"
+VITE_APPWRITE_DATABASE_ID = "66a8dbaa0017774e4335"
+VITE_APPWRITE_COLLECTION_ID = "66a8dbd0000a927b1079"
+VITE_APPWRITE_BUCKET_ID = "66a8e6050027877ab53a"
